# module-runner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
module_runner/: __init__.py  exceptions.py  runner.py
module_runner/environment/: __init__.py  constants.py  manager.py  mode.py  pip_env.py  resolver.py  utils.py  uv_env.py
module_runner/runners/: __init__.py  base.py  node.py  python.py  shell.py
module_runner/runners/package_managers/: __init__.py
module_runner/runners/package_managers/node/: __init__.py  base.py  npm.py  pnpm.py  yarn.py
module_runner/runners/package_managers/python/: __init__.py  base.py  pip.py  system.py  uv.py
sandbox/: README.md  run_examples.py
sandbox/modules/greet/: main.js  package.json
sandbox/modules/greet_shell/: main.sh
sandbox/modules/normalize/: main.py
sandbox/modules/stats/: main.py  pyproject.toml
sandbox/modules/system_report/: main.py
