[project]
name = "module-runner"
version = "0.1.0"
description = "Lightweight helper that prepares Python environments and executes standalone modules."
authors = [{name = "Leo Jaimesson"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = ["runner", "modules", "venv", "uv", "automation", "subprocess"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/leojaimesson/module-runner"
Repository = "https://github.com/leojaimesson/module-runner"
"Bug Tracker" = "https://github.com/leojaimesson/module-runner/issues"

[tool.setuptools.packages.find]
include = ["module_runner*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
