[project]
name = "module-runner"
version = "0.3.1"
description = "Bring discipline to local automation: run Python, Node.js, and Shell modules in isolated subprocesses with automatic environment management."
authors = [{name = "Leo Jaimesson"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = ["runner", "modules", "venv", "uv", "npm", "yarn", "pnpm", "shell", "automation", "subprocess", "nodejs", "isolation", "local-automation", "scripting", "task-runner", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/leojaimesson/module-runner"
Repository = "https://github.com/leojaimesson/module-runner"
"Bug Tracker" = "https://github.com/leojaimesson/module-runner/issues"

[tool.setuptools.packages.find]
include = ["module_runner*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
